# transitions

./: CMakeLists.txt  main.m  transitions_ams.m  transitions_direct.m  transitions_gpa.m  transitions_mfpt.m
matlab/: dist_fun.m  error_fill.m  generate_plots.m  main.m  make_samples.m  transitions_ams.m  transitions_direct.m  transitions_gpa.m  transitions_mfpt.m  transitions_tams.m
src/: main.cpp  timestepper.cpp  timestepper.hpp
